crates/nota-tui/tests/snapshots/main_screen__too_small.snap
---
source: crates/nota-tui/tests/main_screen.rs
expression: terminal.backend()
---
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                  make the window larger                   "
"                     nota needs 60×20                      "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
"                                                           "
