crates/nota-tui/tests/snapshots/main_screen__too_small_confirming_stop.snap
---
source: crates/nota-tui/tests/main_screen.rs
expression: terminal.backend()
---
"                              "
"                              "
"                              "
"       stop recording?        "
"   y stop  n keep recording   "
"                              "
"                              "
"                              "
